# jamwatch

./: README.md  pyproject.toml
docs/: wiring.fzz
scripts/: show_pins.sh  start_background.sh
src/jamwatch/: __about__.py  __init__.py  app_types.py  blink.py  button.py  cli.py  config.py  error.py  file_reader.py  file_writer.py  filter.py  hardware.py  log.py  mount.py  mp3.py  mybutton.py  orchestrator.py  param.py  types.py
