[project]
name = "jamwatch"
dynamic = ["version"]
# version = "2025.7.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Engval", email = "daniel@engvalls.eu" }
]
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2025.5.1",
    "get-version>=3.5.5",
    "gpiozero>=2.0.1",
    "jsons>=1.6.3",
    "loguru>=0.7.3",
    "musicplayer",
    "persist-cache>=0.4.4",
    "pigpio>=1.78",
]

[project.scripts]
jamwatch = "jamwatch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "wat>=0.6.0",
]

[tool.uv.sources]
musicplayer = { git = "https://github.com/engdan77/musicplayer.git" }

[tool.hatch.version]
path = "src/jamwatch/__about__.py"
